--- a/Home.css
+++ b/Home.css
@@ -26,7 +26,7 @@ body{
 /*. Extra Small Devices PHONES, 600PX & DOWN */
 @media only screen and (max-width:600px){
     body{
-        background-color: yellow;
+        background-color: #5b610a;
     }
     
     .Logo{
@@ -44,14 +44,10 @@ body{
         line-height: 2.2;
     }
 
-
-
-
-
     .fa-brands ,.fa-solid{
         font-size: 1.5em;
         color: white;
-        text-shadow: -3px 3px 4px green;
+        text-shadow: -3px 3px 4px rgb(0, 0, 0);
     }
     .fa-brands:hover, .fa-solid:hover{
         color: green;
@@ -60,12 +56,12 @@ body{
 
     .fa-whatsapp:hover, .fa-facebook-f:hover{
         color: red;
-        text-shadow: -3px 3px 4px green;
+        text-shadow: -3px 3px 4px rgb(255, 255, 255);
 
     }
     .fa-tiktok:hover{
         color: white;
-        text-shadow: -3px 3px 4px red;
+        text-shadow: -3px 3px 4px rgb(187, 0, 0);
 
     }
 
@@ -81,20 +77,41 @@ body{
     .Logo{
 
         position: relative;
-        left: 20%;
+        left: 0;
         right: 0;
         top: 0;
         width: 60%;
     }
     
     .Social-Medias{
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        flex-direction: row;
+        float: right;
+        font-size: 5em;
         position: relative;
-        top: 90px;
-    }
+        right: 3em;
+        top: 0.4em;
+        
+}
+
+
+.fa-brands ,.fa-solid{
+    color: rgb(0, 0, 0);
+    text-shadow: -2px 3px 4px rgb(255, 255, 255);
+
+}
+.fa-brands:hover, .fa-solid:hover{
+    color: green;
+    text-shadow: -3px 3px 4px rgb(255, 255, 255);
+}
+
+.fa-whatsapp:hover, .fa-facebook-f:hover{
+    color: red;
+    text-shadow: -3px 3px 4px rgb(255, 255, 255);
+
+}
+.fa-tiktok:hover{
+    color: rgb(253, 253, 253);
+    text-shadow: -3px 3px 4px rgb(6, 187, 0);
+}
     
 }
 
