--- a/Home.css
+++ b/Home.css
@@ -126,13 +126,43 @@ body{
 /* Large Devices LAPTOP & DESKTOPS, 1200px and up*/
 @media only screen and (min-width: 992px){
     body{
-        background-color: brown;
+        background-color: red;
+    }
+
+    .Social-Medias{
+        display: flex;
+        justify-content: space-between;
+        width: 40%;
+        flex-direction: row;
+        position: relative;
+        right: 50px;
+        top: 200px;
+    }
+    .fa-brands ,.fa-solid{
+        font-size: 1em;
+        color: white;
+        text-shadow: -3px 3px 4px rgb(0, 0, 0);
+    
+    }
+    .fa-brands:hover, .fa-solid:hover{
+        color: green;
+        text-shadow: -3px 3px 4px rgb(255, 255, 255);
+    }
+    
+    .fa-whatsapp:hover, .fa-facebook-f:hover{
+        color: green;
+        text-shadow: -3px 3px 4px rgb(255, 255, 255);
+    
+    }
+    .fa-tiktok:hover{
+        color: green;
+        text-shadow: -3px 3px 4px rgb(255, 255, 255);
     }
 }
 
 /* Extra Large Devices LARGE LAPTOPS AND DESKTOPS 1200px nd up*/
 @media only screen and (min-width: 1200px){
     body{
-        background-color: blue;
+        background-color: pink;
     }
 }
