--- a/Home.css
+++ b/Home.css
@@ -41,7 +41,7 @@ body{
         font-size: 2em; 
         position: relative;
         flex-direction: column;
-        line-height: 2.2;
+        line-height: 1.9;
     }
 
     .fa-brands ,.fa-solid{
@@ -63,6 +63,30 @@ body{
         color: white;
         text-shadow: -3px 3px 4px rgb(187, 0, 0);
 
+    }
+
+    /* IMAGES */
+ 
+    .image-slideshow{
+        max-width: 1000px;
+        max-height: 1000px;
+        position: fixed;
+        bottom: 2px;
+        left: 1px;
+        z-index: -1;
+    }
+    img{
+        width: 100%;
+        height:100%;
+    }
+    .fade{
+        animation-name: fade;
+        animation-duration: 2s;
+    }
+    @keyframes fade {
+        from {opacity: 0.7;}
+        to {opacity: 1;}
+        
     }
 
 
