--- a/Home.css
+++ b/Home.css
@@ -83,11 +83,28 @@ body{
         animation-name: fade;
         animation-duration: 2s;
     }
+   
     @keyframes fade {
+  0% {
+    top: 0;
+  }
+  50% {
+    top: 30px;
+    left: 20px;
+  }
+  50% {
+    top: 10px;
+  }
+  100% {
+    top: 0;
+  }
+}
+
+     /*keyframes fade {
         from {opacity: 0.7;}
         to {opacity: 1;}
         
-    }
+    }*/
 
 
 }
